--- a/src/Contact.css
+++ b/src/Contact.css
@@ -47,7 +47,7 @@
     width: 100%;
     padding: 10px;
     background-color: #ff69b4;
-    color: white;
+    color: black;
     border: none;
     border-radius: 5px;
     cursor: pointer;
