--- a/src/Login.css
+++ b/src/Login.css
@@ -13,6 +13,8 @@
     padding: 30px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    max-width:400px;
+    margin: 0 auto;
   }
   
   .login-title {
