--- a/src/Profile.css
+++ b/src/Profile.css
@@ -1,59 +1,62 @@
+/* Profile.css */
+
 .profile-container {
-    max-width: 800px;
+    max-width: 600px;
     margin: 0 auto;
     padding: 20px;
-}
-
-.section-title {
-    margin-bottom: 10px;
-}
-
-.avatar-section {
-    margin-bottom: 30px;
-}
-
-.avatar-selection {
+    text-align: center;
+  }
+  
+  .section-title {
+    margin-bottom: 20px;
+  }
+  
+  .avatar-selection {
     display: flex;
-}
-
-.avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-.avatar-link {
-    display: inline-block;
-    border: 5px solid transparent; /* Initially transparent border */
-    border-radius: 50%;
-    overflow: hidden;
-    width:100px;
-    height:100px;
-}
-
-.avatar-link:hover {
-    border-color: #ff69b4; /* Strawberry light pink border */
-}
-
-
-
-.address-section,
-.credit-card-section {
-    margin-bottom: 30px;
-}
-
-.address-form,
-.credit-card-form {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .avatar-link {
+    margin: 10px;
+  }
+  
+  .avatar {
+    width: 100px; /* Adjust as needed */
+    height: 100px; /* Adjust as needed */
+    border-radius: 50%; /* Make it round */
+  }
+  
+  .personal-info-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .input-field {
     margin-bottom: 10px;
-}
+  }
+  
+  /* Profile.css */
 
-.address-form input,
-.credit-card-form input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-}
+  .avatar {
+    width: 100px; /* Adjust as needed */
+    height: 100px; /* Adjust as needed */
+    border-radius: 50%; /* Make it round */
+    transition: border-radius 0.3s ease; /* Smooth transition */
+  }
+  
+  .avatar:hover {
+    border-radius: 20%; /* Adjust the border radius on hover */
+  }
+  
+  /* Profile.css */
 
-.address-actions button {
-    margin-right: 10px;
-}
+   .profile-container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
+    background: linear-gradient(135deg, #FFC0CB, #ADD8E6); /* Light pink to light blue gradient */
+  }
+  
