--- a/src/Login.css
+++ b/src/Login.css
@@ -52,17 +52,21 @@
     background-color: rgba(255, 255, 255, 0.7); /* Transparent white background */
   }
   
-  button {
-    background-color: #ff85a2;
-    color: white;
-    padding: 12px 24px;
+
+
+  .login-button{
+    background-color: #FCA3B7; 
     border: none;
+    padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 18px;
-    transition: background-color 0.3s ease;
   }
-  
-  button:hover {
-    background-color: #ff6699;
+
+  .login-button:hover{
+    background-color: black; /* Strawberry pink */
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
   }
