--- a/src/Shop.css
+++ b/src/Shop.css
@@ -4,6 +4,8 @@
     text-align: center;
     padding: 20px;
     height:550px;
+    background: linear-gradient(135deg, #b3c1f7, #ffb6c1);
+    border-radius: 10px;
 }
 
 
