--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,36 +1,61 @@
 .about-us-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 50px;
-    background-color: #FFC0CB; /* Strawberry pink or light pink */
+    background-color: #FFC0CB;
 }
 
 .image-container {
-    flex: 1;
     text-align: center;
+    max-width: 600px;
+    margin-bottom: 30px;
 }
 
 .cute-image {
-    width: 600px; /* Adjust size as needed */
-    border-radius: 50%; /* Circular shape */
+    width: 100%;
+    max-width: 600px;
+    border-radius: 50%;
 }
 
 .text-container {
-    flex: 1;
-    padding: 0 20px;
-}
-
-.title {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Example of cute and elegant font */
-    font-size: 24px;
-    color: #333; /* Black color */
+    max-width: 600px;
     text-align: center;
 }
 
+.title {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 20px;
+}
+
 .description {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Example of cute and elegant font */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    color: #666; /* Dark gray color */
-    text-align: justify;
+    border:  1px solid black;
+    padding: 20px;
+    margin:10px;
+    text-align: center;
+    color: #666;
+    line-height: 1.5;
+}
+
+@media (min-width: 768px) {
+    .about-us-container {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .image-container {
+        margin-right: 30px;
+        margin-bottom: 0;
+        max-width:500px;
+    }
+
+    .text-container {
+        text-align: left;
+    }
 }
