--- a/src/Home.css
+++ b/src/Home.css
@@ -1,16 +1,49 @@
+/* src/Home.css */
 .home-container {
-    position: relative;
-    min-height: 100vh; /* Ensure the container takes up at least the full height of the viewport */
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container {
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  position: relative;
+}
+
+.centered-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.footer-placeholder {
+  height: 50px; /* Adjust the height as needed */
+}
+
+/* Media Queries */
+@media (max-width: 767px) {
+  .image-container {
+    padding-bottom: 150%; /* Adjust the aspect ratio for smaller screens */
   }
-  
-  .centered-image {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 100%;
-    max-height: 100%;
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .image-container {
+    padding-bottom: 120%; /* Adjust the aspect ratio for tablets */
   }
-  
- 
+}
+
+@media (min-width: 1024px) {
+  .image-container {
+    padding-bottom: 100%; /* Aspect ratio for larger screens */
+  }
+}
   
