--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -9,7 +9,7 @@
 
 .image-container {
     text-align: center;
-    max-width: 600px;
+    max-width: 100%;
     margin-bottom: 30px;
 }
 
@@ -26,7 +26,7 @@
 
 .title {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 24px;
+    font-size: 28px;
     color: #333;
     margin-bottom: 20px;
 }
@@ -34,10 +34,9 @@
 .description {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    border:  1px solid black;
+    border: 1px solid black;
     padding: 20px;
-    margin:10px;
-    text-align: center;
+    margin: 10px;
     color: #666;
     line-height: 1.5;
 }
@@ -46,16 +45,24 @@
     .about-us-container {
         flex-direction: row;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start; /* Align items to the top */
+        padding: 50px 100px;
     }
 
     .image-container {
         margin-right: 30px;
         margin-bottom: 0;
-        max-width:500px;
+        max-width: 50%;
+        flex: 1; /* Allow image container to grow */
     }
 
     .text-container {
+        max-width: 50%;
+        flex: 1; /* Allow text container to grow */
         text-align: left;
+    }
+
+    .cute-image {
+        max-width: 100%; /* Ensure image resizes properly */
     }
 }
