--- a/src/DevInfo.css
+++ b/src/DevInfo.css
@@ -1,3 +1,5 @@
+
+
 .dev-info-container {
     display: flex;
     flex-direction: column;
@@ -5,25 +7,24 @@
     justify-content: center;
     margin: 20px;
     padding-top: 50px; /* Reduced padding to make the page shorter */
+    flex: 1; /* Allow the container to grow and fill available space */
 }
 
 .dev-info-image img {
     border-radius: 50%;
-    max-width: 300px; /* Reduced max-width to make the image smaller */
+    max-width: 200px; /* Reduced max-width to make the image smaller */
     max-height: 300px; /* Reduced max-height to make the image smaller */
     border: 5px solid #ffc0cb; /* Pink border for extra cuteness */
     margin-bottom: 20px; /* Margin at the bottom for spacing */
 }
 
-.image-container {
-    padding-right: 20px;
-    padding-left: 20px;
-}
+
 
 .cute-heading {
     color: #ff69b4; /* Pink color for heading */
     font-size: 22px; /* Reduced font size */
-    margin-bottom: 15px; /* Added margin to space the heading */
+    margin-bottom: 10px;
+    text-align:center; /* Added margin to space the heading */
 }
 
 .cute-paragraph {
@@ -36,6 +37,7 @@
     max-width: 600px; /* Reduced max-width to make the text container smaller */
     text-align: center; /* Center align the text */
     padding: 0 20px; /* Added padding for spacing */
+    padding-left: 20px;
 }
 
 @media (min-width: 768px) {
@@ -48,11 +50,13 @@
 
     .dev-info-image img {
         margin-bottom: 0;
-        margin-right: 30px; /* Margin to the right for spacing */
+        margin-right: 50px; /* Margin to the right for spacing */
     }
 
     .dev-info-text {
-        text-align: left; /* Align text to the left for larger screens */
+        text-align: right; /* Align text to the left for larger screens */
     }
 }
+
+
 
