--- a/src/Login.css
+++ b/src/Login.css
@@ -1,7 +1,7 @@
 .background {
     margin: 0;
     padding: 0;
-    background-image: url('./images/tan_chibi_laptop.png');
+    background-image: url('./images/tan_chibi_laptop.jpg');
     background-size: cover;
     background-position: center;
     height: 900px;
