--- a/src/Signup.css
+++ b/src/Signup.css
@@ -1,7 +1,7 @@
 .background-signup {
   margin: 0;
   padding: 0;
-  background-image: url('./images/chibi_laptop.png');
+  background-image: url('./images/chibi_laptop.jpg');
   background-size: cover;
   background-position: center;
   height: 1300px;
