--- a/src/Product.css
+++ b/src/Product.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
+
 .product-container {
   background-color: #fff;
   background: linear-gradient(135deg, #ffd3e2, #ffb6c1);
@@ -9,45 +12,56 @@
   text-align: center;
 }
 
-.product-title {
-  font-size: 36px;
-  color: #ff80b3;
-  font-family: 'Courier New', Courier, monospace;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin-bottom: 20px;
-}
 
 .description p {
-  font-size: 18px;
-  color: #666;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Dancing Script', cursive;
+  font-size: 18px; /* Adjust the size as needed */
+  color: #ff66b2; /* Example color */
   line-height: 1.5;
   margin-bottom: 30px;
 }
 
 .price p {
   font-size: 24px;
-  color: #ff80b3;
+  font-family: 'Dancing Script', cursive;
+  color: #ff66b2; /* Example color */
   margin-bottom: 30px;
 }
 
 .options, .custom-sizes {
   margin-bottom: 30px;
+  font-family: 'Dancing Script', cursive;
+  font-size: 18px; /* Adjust the size as needed */
+  color: #ff66b2; /* Example color */
+
 }
 
 .size-title, .custom-title {
-  font-size: 20px;
-  color: #ff80b3;
+  font-family: 'Dancing Script', cursive;
+  font-size: 20px; /* Adjust the size as needed */
+  color: #ff66b2; /* Example color */
   margin-bottom: 10px;
 }
 
 .size, .custom-size {
-  font-size: 18px;
-  color: #666;
+  font-family: 'Dancing Script', cursive;
+  font-size: 18px; /* Adjust the size as needed */
+  color: #ff66b2; /* Example color */
   margin-right: 10px;
 }
+ 
+.product-name {
+  font-family: 'Great Vibes', cursive;
+  font-size: 36px; 
+  color: #ff66b2; /* Example color */
 
+}
+.options{
+  text-align: center;
+}
+.numbers {
+  text-align: center;
+}
 .custom-input {
   width: 120px;
   height: 40px;
@@ -56,7 +70,11 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
+  font-family: 'Dancing Script', cursive;
+  color: #ff66b2; 
 }
+
+
 
 .add-to-cart-btn {
   background-color: #ff80b3;
@@ -75,14 +93,16 @@
 }
 
 .nailsizes {
-  color: #666;
-  font-size: 18px;
+  font-family: 'Dancing Script', cursive;
+  font-size: 18px; /* Adjust the size as needed */
+  color: #ff66b2; /* Example color */
   margin-bottom: 20px;
 }
 
 .quantity {
-  color: #666;
-  font-size: 18px;
+  font-family: 'Dancing Script', cursive;
+  font-size: 18px; /* Adjust the size as needed */
+  color: #ff66b2; /* Example color */
   margin-bottom: 20px;
 }
 
@@ -143,4 +163,20 @@
   border-radius: 4px;
   font-size: 14px;
   text-align: center;
+}
+
+.left-hand {
+  font-family: 'Dancing Script', cursive;
+  font-size: 18px; /* Adjust the size as needed */
+  color: #ff66b2; /* Example color */
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
+
+.right-hand {
+  font-family: 'Dancing Script', cursive;
+  font-size: 18px; /* Adjust the size as needed */
+  color: #ff66b2; /* Example color */
+  line-height: 1.5;
+  margin-bottom: 30px;
 }
